# dakecoin

./: CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  autogen.sh  configure.ac  libDakeCoinconsensus.pc.in
build-aux/m4/: DakeCoin_find_bdb48.m4  DakeCoin_qt.m4  DakeCoin_subdir_to_include.m4
contrib/: DakeCoin-cli.bash-completion  DakeCoin-qt.pro  DakeCoin-tx.bash-completion  DakeCoind.bash-completion  README.md  gitian-build.sh  install_db4.sh  tidy_datadir.sh  valgrind.supp
contrib/debian/: DakeCoin-qt.desktop  DakeCoin-qt.install  DakeCoin-qt.lintian-overrides  DakeCoin-qt.manpages  DakeCoin-qt.protocol  DakeCoin-tx.bash-completion  DakeCoin-tx.install  DakeCoin-tx.manpages  DakeCoind.bash-completion  DakeCoind.examples  DakeCoind.install  DakeCoind.lintian-overrides  DakeCoind.manpages  README.md  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  check-doc.py  check-rpc-mappings.py  commit-script-check.sh  copyright_header.py  gen-manpages.sh  git-subtree-check.sh  github-merge.py  lint-all.sh  lint-python.sh  lint-whitespace.sh  optimize-pngs.py  security-check.py  symbol-check.py  test-security-check.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: DakeCoind.conf  DakeCoind.init  DakeCoind.openrc  DakeCoind.openrcconf  DakeCoind.service  README.md  org.DakeCoin.DakeCoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  extract-osx-sdk.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: DakeCoin.fc  DakeCoin.if  DakeCoin.spec  DakeCoin.te  README.md
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_test.txt
contrib/testgen/: README.md  base58.py  gen_base58_test_vectors.py
contrib/verify-commits/: gpg.sh  pre-push-hook.sh  verify-commits.sh
contrib/verifybinaries/: README.md  verify.sh
contrib/windeploy/: detached-sig-create.sh
contrib/zmq/: zmq_sub.py  zmq_sub3.4.py
depends/: README.md  description.md
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: DakeCoin-cli.1  DakeCoin-qt.1  DakeCoin-tx.1  DakeCoind.1  Makefile.am
doc/release-notes/: release-notes-0.10.0.md  release-notes-0.10.1.md  release-notes-0.10.2.md  release-notes-0.10.3.md  release-notes-0.10.4.md  release-notes-0.11.0.md  release-notes-0.11.1.md  release-notes-0.11.2.md  release-notes-0.12.0.md  release-notes-0.12.1.md  release-notes-0.13.0.md  release-notes-0.13.1.md  release-notes-0.13.2.md  release-notes-0.14.0.md  (+47 more)
share/: genbuild.sh  setup.nsi.in
src/: DakeCoin-cli.cpp  DakeCoin-config.h.in  DakeCoind-res.rc  DakeCoind.cpp  Makefile.am  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.h  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  checkpoints.cpp  checkpoints.h  checkpointsync.cpp  checkpointsync.h  checkqueue.h  clientversion.h  compat.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  kernel.cpp  kernel.h  kernelrecord.cpp  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  (+41 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/qt/: DakeCoin.cpp  DakeCoin.qrc  DakeCoinaddressvalidator.cpp  DakeCoinaddressvalidator.h  DakeCoinamountfield.cpp  DakeCoinamountfield.h  DakeCoingui.cpp  DakeCoingui.h  DakeCoinstrings.cpp  DakeCoinunits.cpp  DakeCoinunits.h  aboutdialog.cpp  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  mintingtablemodel.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentserver.cpp  paymentserver.h  qrcodedialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsdialog.h  sendcoinsentry.cpp  sendcoinsentry.h  signverifymessagedialog.cpp  transactiondesc.cpp  (+11 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: DakeCoin_af_ZA.ts  DakeCoin_ar.ts  DakeCoin_bg.ts  DakeCoin_bs.ts  DakeCoin_ca.ts  DakeCoin_ca_ES.ts  DakeCoin_cs.ts  DakeCoin_cy.ts  DakeCoin_da.ts  DakeCoin_de.ts  DakeCoin_el_GR.ts  DakeCoin_en.ts  DakeCoin_eo.ts  DakeCoin_es.ts  DakeCoin_es_CL.ts  DakeCoin_et.ts  DakeCoin_eu_ES.ts  DakeCoin_fa.ts  DakeCoin_fa_IR.ts  DakeCoin_fi.ts  DakeCoin_fr.ts  DakeCoin_fr_CA.ts  DakeCoin_gu_IN.ts  DakeCoin_he.ts  DakeCoin_hi_IN.ts  DakeCoin_hr.ts  DakeCoin_hu.ts  DakeCoin_it.ts  DakeCoin_ja.ts  DakeCoin_la.ts  DakeCoin_lt.ts  DakeCoin_lv_LV.ts  DakeCoin_nb.ts  DakeCoin_nl.ts  DakeCoin_pl.ts  DakeCoin_pt_BR.ts  DakeCoin_pt_PT.ts  DakeCoin_ro_RO.ts  DakeCoin_ru.ts  DakeCoin_sk.ts  (+7 more)
src/qt/res/: DakeCoin-qt-res.rc
src/qt/test/: uritests.cpp
src/test/: DoS_tests.cpp  README  base58_tests.cpp  checkblock_tests.cpp  getarg_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  test_DakeCoin.cpp  util_tests.cpp
src/test/TODO/: bloom_tests.cpp
src/test/containers/: README.md  attach  build_base  build_net  build_seed  check_net_can_mint  coin_container.rb  make  node  remove_DakeCoin_containers  show_log
src/test/containers/base/: Dockerfile
src/test/containers/base_devel/: Dockerfile
src/test/features/step_definitions/: common.rb
test/: README.md  config.ini.in
(+118 files in other folders)
